--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,13 @@
 
 .app {
   background-color: #333533;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .bottom-area {
   display: flex;
-  min-height: 78vh;
+  height: 87%;
+  width: 100%;
 }
 
 .code-editor {
@@ -29,11 +30,12 @@
 .instructions {
   background-color: #333533 !important;
   color: #ffffff;
-  min-height: 15vh;
+  height: 13%;
 }
 
 .nav {
   background-color: #f5cb5c;
+  height: 7%;
 }
 
 .sidebar {
